# tokio-sticky-channel

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  test.yml
src/: error.rs  lib.rs  tests.rs  util.rs
src/bounded/: mod.rs  receiver.rs  sender.rs
src/unbounded/: mod.rs  receiver.rs  sender.rs
