[package]
name = "tokio-sticky-channel"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Sticky channel pattern for Tokio - routes messages to specific receivers based on ID hash for consistent message delivery"
homepage = "https://github.com/devashishdxt/tokio-sticky-channel"
repository = "https://github.com/devashishdxt/tokio-sticky-channel"
documentation = "https://docs.rs/tokio-sticky-channel"
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["tokio", "channel", "async", "sticky", "routing"]
readme = "README.md"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util", "rt-multi-thread"] }
futures = "0.3"
